--- a/docs/330_vs_340.md
+++ b/docs/330_vs_340.md
@@ -1,3 +1,7 @@
+---
+date created: Sunday, January 15th 2023, 12:59:24 pm
+date modified: Sunday, January 15th 2023, 3:23:15 pm
+---
 # CPSC 330 vs. CPSC 340
 
 CPSC 330 is a course in applied machine learning, and is closely related to the field of data science. 
