--- a/lectures/AmirAbdi/06_column-transformer-text-feats.ipynb
+++ b/lectures/AmirAbdi/06_column-transformer-text-feats.ipynb
@@ -11339,9 +11339,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:cpsc330]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-cpsc330-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -11353,7 +11353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
